minor changes to avatar border

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>My first Bulma website</title>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <script src="https://kit.fontawesome.com/515daf4ad2.js" crossorigin="anonymous"></script>
 </head>
@@ -16,7 +17,7 @@
     <div class="box">
       <figure class="container image is-128x128 mb-5">
         <img class="is-rounded" src="assets/photo_2020-07-30_20-48-41.jpg" alt="some handsome dude"
-          style="border: 0.2em solid #e3f6f5">
+          style="border: 0.3em solid #e3f6f5">
       </figure>
       <h1 class="title is-3">Lenin A. Nava</h1>
       <h2 class="subtitle is-5">Front-end web developer</h2>
