--- a/index.html
+++ b/index.html
@@ -11,89 +11,92 @@
   <script src="https://kit.fontawesome.com/515daf4ad2.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="container">
-<div class="columns has-text-centered my-5">
-  <section class="column is-one-quarter" id="information">
-    <div class="box">
-      <figure class="container image is-128x128 mb-5">
-        <img class="is-rounded" src="assets/photo_2020-07-30_20-48-41.jpg" alt="some handsome dude"
-          style="border: 0.3em solid #e3f6f5">
-      </figure>
-      <h1 class="title is-3">Lenin A. Nava</h1>
-      <h2 class="subtitle is-5">Front-end web developer</h2>
-      <p class="has-text-centered">Self-taught web dev. I like RPGs, music and Twin Peaks.</p>
-      <hr>
-      <nav class="breadcrumb is-small is-centered has-bullet-separator" aria-label="breadcrumbs">
-        <ul>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Blog posts</a></li>
-          <li><a href="#">Other stuff</a></li>
-        </ul>
-      </nav>
-      <div class="level is-mobile">
-        <span class="level-item icon">
-          <a href="twitter.com/lofiln" class="fab fa-twitter"></a>
-        </span>
-
-        <span class="level-item icon">
-          <a class="fab fa-github-alt"></a>
-        </span>
-
-        <span class="level-item icon">
-          <a class="fab fa-telegram-plane"></a>
-        </span>
-
+<body class="">
+  <section class="hero is-fullheight" id="information">
+    <div class="hero-body">
+      <div class="container">
+        <div class="columns">
+          <div class="container column is-three-fifths is-offset-one-fifth has-text-centered">
+            <figure class="container image is-128x128 mb-5">
+              <img class="is-rounded" src="assets/photo_2020-07-30_20-48-41.jpg" alt="some handsome dude"
+                style="border: 0.3em solid #bae8e8" style="height: 10%">
+            </figure>
+            <h1 class="title is-1">Lenin A. Nava</h1>
+            <h2 class="subtitle is-3">Front-end web developer</h2>
+            <p class="mb-5">Self-taught web dev. React and CSS framework enthusiast.
+              <br>
+             I like old school RPGs, music and Twin Peaks.
+             <br>
+             The owls are not what they seem.
+            </p>
+            <div>
+              <span class="icon is-large">
+                <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter"></a>
+              </span>
+              <span class="icon is-large mx-5">
+                <a class="fab fa-lg fa-github-alt"></a>
+              </span>
+              <span class="icon is-large">
+                <a class="fab fa-lg fa-telegram-plane"></a>
+              </span>
+            </div>
+            <hr>
+            <nav class="breadcrumb is-centered has-bullet-separator" aria-label="breadcrumbs">
+              <ul>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Blog posts</a></li>
+                <li><a href="#">Other stuff</a></li>
+              </ul>
+            </nav>
+          </div>   
+        </div>
       </div>
-
+      
     </div>
-    <footer class="footer box">
-      <p>Made with Bulma</p>
-    </footer>
   </section>
-  <section class="column" id="content">
+  <section class="" id="content">
     <div class="container box">
-      <h1 class="title is-3">Stuff I've done</h1>
       <div class="tile is-ancestor is-vertical">
         <div class="tile is-parent">
-          <div class="tile is-child box"> 
+          <div class="tile is-child box">
             <figure class="image is-3by2">
               <img src="assets/Avatar 1.png" alt="">
             </figure>
           </div>
-          <div class="tile is-child box"> 
+          <div class="tile is-child box">
             <figure class="image is-3by2">
               <img src="assets/Avatar 1.png" alt="">
             </figure>
           </div>
-          <div class="tile is-child box"> 
+          <div class="tile is-child box">
             <figure class="image is-3by2">
               <img src="assets/Avatar 1.png" alt="">
             </figure>
           </div>
         </div>
         <div class="tile is-parent">
-          <div class="tile is-child box"> 
+          <div class="tile is-child box">
             <figure class="image is-3by2">
               <img src="assets/Avatar 1.png" alt="">
             </figure>
           </div>
-          <div class="tile is-child box"> 
+          <div class="tile is-child box">
             <figure class="image is-3by2">
               <img src="assets/Avatar 1.png" alt="">
             </figure>
           </div>
-          <div class="tile is-child box"> 
+          <div class="tile is-child box">
             <figure class="image is-3by2">
               <img src="assets/Avatar 1.png" alt="">
             </figure>
           </div>
-        </div>
         </div>
       </div>
+    </div>
   </section>
-</div>
 
-<script type="text/javascript" src="lib/main.js"></script>
+
+  <script type="text/javascript" src="lib/main.js"></script>
 </body>
 
 </html>
