basic projects card structure

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
   <script src="https://kit.fontawesome.com/515daf4ad2.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="">
+<body>
   <section class="hero is-fullheight" id="information">
     <div class="hero-body">
       <div class="container">
         <div class="columns">
           <div class="container column is-three-fifths is-offset-one-fifth has-text-centered">
-            <figure class="container image is-128x128 mb-5">
-              <img class="is-rounded" src="assets/photo_2020-07-30_20-48-41.jpg" alt="some handsome dude"
+            <figure class="container image is-128x128 mb-4">
+              <img class="is-rounded" src="assets/Avatar 1.png" alt="some handsome dude"
                 style="border: 0.3em solid #bae8e8" style="height: 10%">
             </figure>
             <h1 class="title is-1">Lenin A. Nava</h1>
             <h2 class="subtitle is-3">Front-end web developer</h2>
             <p class="mb-5">Self-taught web dev. React and CSS framework enthusiast.
               <br>
-             I like old school RPGs, music and Twin Peaks.
-             <br>
-             The owls are not what they seem.
+              I like old school RPGs, music and Twin Peaks.
+              <br>
+              The owls are not what they seem.
             </p>
             <div>
               <span class="icon is-large">
@@ -43,60 +43,135 @@
             <hr>
             <nav class="breadcrumb is-centered has-bullet-separator" aria-label="breadcrumbs">
               <ul>
-                <li><a href="#">Projects</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#">Blog posts</a></li>
                 <li><a href="#">Other stuff</a></li>
               </ul>
             </nav>
-          </div>   
-        </div>
-      </div>
-      
-    </div>
-  </section>
-  <section class="" id="content">
-    <div class="container box">
-      <div class="tile is-ancestor is-vertical">
-        <div class="tile is-parent">
-          <div class="tile is-child box">
-            <figure class="image is-3by2">
-              <img src="assets/Avatar 1.png" alt="">
-            </figure>
-          </div>
-          <div class="tile is-child box">
-            <figure class="image is-3by2">
-              <img src="assets/Avatar 1.png" alt="">
-            </figure>
-          </div>
-          <div class="tile is-child box">
-            <figure class="image is-3by2">
-              <img src="assets/Avatar 1.png" alt="">
-            </figure>
-          </div>
-        </div>
-        <div class="tile is-parent">
-          <div class="tile is-child box">
-            <figure class="image is-3by2">
-              <img src="assets/Avatar 1.png" alt="">
-            </figure>
-          </div>
-          <div class="tile is-child box">
-            <figure class="image is-3by2">
-              <img src="assets/Avatar 1.png" alt="">
-            </figure>
-          </div>
-          <div class="tile is-child box">
-            <figure class="image is-3by2">
-              <img src="assets/Avatar 1.png" alt="">
-            </figure>
           </div>
         </div>
       </div>
     </div>
   </section>
-
-
+  <section class="section columns" id="projects">
+      <div class="container column is-three-fifths is-offset-one-fifth has-text-centered">
+        <header>
+          <h1 class="title is-3 mb-5">Stuff I've done.</h1>
+        </header>
+        <div class="tile is-ancestor">
+          <div class="tile is-parent">
+            <div class="tile is-child">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class=></div>
+                </div>
+                <figure class="card-image">
+                  <img src="assets/Avatar 1.png" alt="">
+                </figure>
+                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-footer">
+                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Icon here</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tile is-parent">
+            <div class="tile is-child">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class=></div>
+                </div>
+                <figure class="card-image">
+                  <img src="assets/Avatar 1.png" alt="">
+                </figure>
+                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-footer">
+                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Icon here</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tile is-parent">
+            <div class="tile is-child">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class=></div>
+                </div>
+                <figure class="card-image">
+                  <img src="assets/Avatar 1.png" alt="">
+                </figure>
+                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-footer">
+                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Icon here</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tile is-ancestor">
+          <div class="tile is-parent">
+            <div class="tile is-child">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class=></div>
+                </div>
+                <figure class="card-image">
+                  <img src="assets/Avatar 1.png" alt="">
+                </figure>
+                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-footer">
+                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Icon here</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tile is-parent">
+            <div class="tile is-child">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class=></div>
+                </div>
+                <figure class="card-image">
+                  <img src="assets/Avatar 1.png" alt="">
+                </figure>
+                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-footer">
+                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Icon here</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tile is-parent">
+            <div class="tile is-child">
+              <div class="card">
+                <div class="card-header">
+                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class=></div>
+                </div>
+                <figure class="card-image">
+                  <img src="assets/Avatar 1.png" alt="">
+                </figure>
+                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-footer">
+                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Icon here</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+  </section>
   <script type="text/javascript" src="lib/main.js"></script>
 </body>
-
 </html>
