--- a/index.html
+++ b/index.html
@@ -54,25 +54,25 @@
     </div>
   </section>
   <section class="section columns" id="projects">
-      <div class="container column is-three-fifths is-offset-one-fifth has-text-centered">
-        <header>
-          <h1 class="title is-3 mb-5">Stuff I've done.</h1>
+      <div class="column is-three-fifths is-offset-one-fifth has-text-centered">
+        <header class="mb-5">
+          <h1 class="title is-1">Stuff I've done</h1>
         </header>
         <div class="tile is-ancestor">
           <div class="tile is-parent">
             <div class="tile is-child">
               <div class="card">
                 <div class="card-header">
-                  <div class="card-header-title is-centered">Test Card</div>
+                  <div class="card-header-title is-centered">Cow Products</div>
                   <div class=></div>
                 </div>
                 <figure class="card-image">
-                  <img src="assets/Avatar 1.png" alt="">
+                  <img src="assets/Anotación 2020-08-09 183341.jpg" alt="Some cows">
                 </figure>
-                <div class="card-content">Card content, test asñlfkjasñldf</div>
+                <div class="card-content">A simple landing page made with plain CSS.</div>
                 <div class="card-footer">
-                  <div class="card-footer-item">Icon here</div>
-                  <div class="card-footer-item">Icon here</div>
+                  <a class="card-footer-item" href="https://github.com/leninnava/Cow-Products_landing-page">Github repo</a>
+                  <a class="card-footer-item" href="https://leninnava.github.io/Cow-Products_landing-page/">Live page</a>
                 </div>
               </div>
             </div>
@@ -89,8 +89,8 @@
                 </figure>
                 <div class="card-content">Card content, test asñlfkjasñldf</div>
                 <div class="card-footer">
-                  <div class="card-footer-item">Icon here</div>
-                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Github repo</div>
+                  <div class="card-footer-item">Live page</div>
                 </div>
               </div>
             </div>
@@ -107,8 +107,8 @@
                 </figure>
                 <div class="card-content">Card content, test asñlfkjasñldf</div>
                 <div class="card-footer">
-                  <div class="card-footer-item">Icon here</div>
-                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Github repo</div>
+                  <div class="card-footer-item">Live page</div>
                 </div>
               </div>
             </div>
@@ -127,8 +127,8 @@
                 </figure>
                 <div class="card-content">Card content, test asñlfkjasñldf</div>
                 <div class="card-footer">
-                  <div class="card-footer-item">Icon here</div>
-                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Github repo</div>
+                  <div class="card-footer-item">Live page</div>
                 </div>
               </div>
             </div>
@@ -145,8 +145,8 @@
                 </figure>
                 <div class="card-content">Card content, test asñlfkjasñldf</div>
                 <div class="card-footer">
-                  <div class="card-footer-item">Icon here</div>
-                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Github repo</div>
+                  <div class="card-footer-item">Live page</div>
                 </div>
               </div>
             </div>
@@ -163,8 +163,8 @@
                 </figure>
                 <div class="card-content">Card content, test asñlfkjasñldf</div>
                 <div class="card-footer">
-                  <div class="card-footer-item">Icon here</div>
-                  <div class="card-footer-item">Icon here</div>
+                  <div class="card-footer-item">Github repo</div>
+                  <div class="card-footer-item">Live page</div>
                 </div>
               </div>
             </div>
@@ -172,6 +172,11 @@
         </div>
       </div>
   </section>
+  <footer class="footer">
+    <div class="content has-text-centered">
+      Made with Bulma :D
+    </div>
+  </footer>
   <script type="text/javascript" src="lib/main.js"></script>
 </body>
 </html>
