info section changes

--- a/index.html
+++ b/index.html
@@ -13,44 +13,44 @@
 
 <body>
   <section class="hero is-fullheight" id="information">
-    <div class="hero-body">
-      <div class="container">
+    <div class="hero-body container">
         <div class="columns">
-          <div class="container column is-three-fifths is-offset-one-fifth has-text-centered">
+          <div class="column is-narrow has-text-centered">
             <figure class="container image is-128x128 mb-4">
-              <img class="is-rounded" src="assets/Avatar 1.png" alt="some handsome dude"
-                style="border: 0.3em solid #bae8e8" style="height: 10%">
-            </figure>
-            <h1 class="title is-1">Lenin A. Nava</h1>
-            <h2 class="subtitle is-3">Front-end web developer</h2>
-            <p class="mb-5">Self-taught web dev. React and CSS framework enthusiast.
+            <img class="is-rounded" src="assets/photo_2020-07-30_20-48-41.jpg" alt="some handsome dude"
+              style="border: 0.3em solid #bae8e8" style="height: 10%">
+          </figure>
+            <h1 class="title is-1">Lenin Nava <span class="tag is-primary ml-2">Front-End Dev</span> </h1>
+            
+          <div class="content"> 
+            <p class="mb-5">Self-taught React and CSS framework enthusiast.
               <br>
               I like old school RPGs, music and Twin Peaks.
               <br>
               The owls are not what they seem.
             </p>
-            <div>
-              <span class="icon is-large">
-                <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter"></a>
-              </span>
-              <span class="icon is-large mx-5">
-                <a class="fab fa-lg fa-github-alt"></a>
-              </span>
-              <span class="icon is-large">
-                <a class="fab fa-lg fa-telegram-plane"></a>
-              </span>
-            </div>
-            <hr>
-            <nav class="breadcrumb is-centered has-bullet-separator" aria-label="breadcrumbs">
-              <ul>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#">Blog posts</a></li>
-                <li><a href="#">Other stuff</a></li>
-              </ul>
-            </nav>
+          </div>
+          <div>
+            <span class="icon is-large">
+              <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter"></a>
+            </span>
+            <span class="icon is-large mx-5">
+              <a class="fab fa-lg fa-github-alt"></a>
+            </span>
+            <span class="icon is-large">
+              <a class="fab fa-lg fa-telegram-plane"></a>
+            </span>
+          </div>
+          <hr>
+          <nav class="breadcrumb is-centered has-bullet-separator" aria-label="breadcrumbs">
+            <ul>
+              <li><a href="#projects">Projects</a></li>
+              <li><a href="#">Blog posts<span class="tag is-info ml-2">Soon!</span></a></li>
+              <li><a href="#">Other stuff<span class="tag is-info ml-2">Also soon!</span></a></li>
+            </ul>
+          </nav>
           </div>
         </div>
-      </div>
     </div>
   </section>
   <section class="section columns" id="projects">
