finished information mobile view

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,167 +9,168 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="https://kit.fontawesome.com/515daf4ad2.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
-  <section class="hero is-fullheight" id="information">
+  <section class="hero is-fullheight">
     <div class="hero-body container">
-        <div class="columns">
-          <div class="column is-narrow has-text-centered">
-            <figure class="container image is-128x128 mb-4">
-            <img class="is-rounded" src="assets/photo_2020-07-30_20-48-41.jpg" alt="some handsome dude"
-              style="border: 0.3em solid #bae8e8" style="height: 10%">
+      <div class="columns">
+        <div class="column is-narrow"  id="information">
+          <figure class="image is-128x128 mb-5">
+            <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.jpg" alt="some handsome dude">
           </figure>
-            <h1 class="title is-1">Lenin Nava <span class="tag is-primary ml-2">Front-End Dev</span> </h1>
-            
-          <div class="content"> 
-            <p class="mb-5">Self-taught React and CSS framework enthusiast.
-              <br>
-              I like old school RPGs, music and Twin Peaks.
-              <br>
-              The owls are not what they seem.
-            </p>
-          </div>
-          <div>
-            <span class="icon is-large">
+          <h1 class="title is-1">Leno Nava <span class="tag is-primary ml-2">Front-End Dev</span> </h1>
+          <nav class="mb-5">
+            <span class="icon">
               <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter"></a>
             </span>
-            <span class="icon is-large mx-5">
+            <span class="icon mx-5">
               <a class="fab fa-lg fa-github-alt"></a>
             </span>
-            <span class="icon is-large">
+            <span class="icon">
               <a class="fab fa-lg fa-telegram-plane"></a>
             </span>
+          </nav>
+          <div class="content"> 
+            <p class="has-text-weight-light has-text-left is-1 mb-5" style="width: 25rem;">Self taught web developer from Venezuela. He makes pretty stuff with React, CSS libraries and likes old school RPGs, indie music and Twin Peaks ☕🦉
+            </p>
           </div>
+         
           <hr>
-          <nav class="breadcrumb is-centered has-bullet-separator" aria-label="breadcrumbs">
+          <nav class="breadcrumb has-bullet-separator" aria-label="breadcrumbs">
             <ul>
               <li><a href="#projects">Projects</a></li>
               <li><a href="#">Blog posts<span class="tag is-info ml-2">Soon!</span></a></li>
               <li><a href="#">Other stuff<span class="tag is-info ml-2">Also soon!</span></a></li>
             </ul>
           </nav>
-          </div>
         </div>
+      </div>
     </div>
   </section>
+  <div class="hero is-primary">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">
+          Stuff I've done
+        </h1>
+      </div>
+    </div>
+  </div>
   <section class="section columns" id="projects">
-      <div class="column is-three-fifths is-offset-one-fifth has-text-centered">
-        <header class="mb-5">
-          <h1 class="title is-1">Stuff I've done</h1>
-        </header>
-        <div class="tile is-ancestor">
-          <div class="tile is-parent">
-            <div class="tile is-child">
-              <div class="card">
-                <div class="card-header">
-                  <div class="card-header-title is-centered">Cow Products</div>
-                  <div class=></div>
-                </div>
-                <figure class="card-image">
-                  <img src="assets/Anotación 2020-08-09 183341.jpg" alt="Some cows">
-                </figure>
-                <div class="card-content">A simple landing page made with plain CSS.</div>
-                <div class="card-footer">
-                  <a class="card-footer-item" href="https://github.com/leninnava/Cow-Products_landing-page">Github repo</a>
-                  <a class="card-footer-item" href="https://leninnava.github.io/Cow-Products_landing-page/">Live page</a>
-                </div>
+    <div class="column is-three-fifths is-offset-one-fifth has-text-centered">
+      <div class="tile is-ancestor">
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title is-centered">Cow Products</div>
+                <div class=></div>
               </div>
-            </div>
-          </div>
-          <div class="tile is-parent">
-            <div class="tile is-child">
-              <div class="card">
-                <div class="card-header">
-                  <div class="card-header-title is-centered">Test Card</div>
-                  <div class=></div>
-                </div>
-                <figure class="card-image">
-                  <img src="assets/Avatar 1.png" alt="">
-                </figure>
-                <div class="card-content">Card content, test asñlfkjasñldf</div>
-                <div class="card-footer">
-                  <div class="card-footer-item">Github repo</div>
-                  <div class="card-footer-item">Live page</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="tile is-parent">
-            <div class="tile is-child">
-              <div class="card">
-                <div class="card-header">
-                  <div class="card-header-title is-centered">Test Card</div>
-                  <div class=></div>
-                </div>
-                <figure class="card-image">
-                  <img src="assets/Avatar 1.png" alt="">
-                </figure>
-                <div class="card-content">Card content, test asñlfkjasñldf</div>
-                <div class="card-footer">
-                  <div class="card-footer-item">Github repo</div>
-                  <div class="card-footer-item">Live page</div>
-                </div>
+              <figure class="card-image">
+                <img src="assets/Anotación 2020-08-09 183341.jpg" alt="Some cows">
+              </figure>
+              <div class="card-content">A simple landing page made with plain CSS.</div>
+              <div class="card-footer">
+                <a class="card-footer-item" href="https://github.com/leninnava/Cow-Products_landing-page">Github
+                  repo</a>
+                <a class="card-footer-item" href="https://leninnava.github.io/Cow-Products_landing-page/">Live page</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="tile is-ancestor">
-          <div class="tile is-parent">
-            <div class="tile is-child">
-              <div class="card">
-                <div class="card-header">
-                  <div class="card-header-title is-centered">Test Card</div>
-                  <div class=></div>
-                </div>
-                <figure class="card-image">
-                  <img src="assets/Avatar 1.png" alt="">
-                </figure>
-                <div class="card-content">Card content, test asñlfkjasñldf</div>
-                <div class="card-footer">
-                  <div class="card-footer-item">Github repo</div>
-                  <div class="card-footer-item">Live page</div>
-                </div>
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title is-centered">Test Card</div>
+                <div class=></div>
+              </div>
+              <figure class="card-image">
+                <img src="assets/Avatar 1.png" alt="">
+              </figure>
+              <div class="card-content">Card content, test asñlfkjasñldf</div>
+              <div class="card-footer">
+                <div class="card-footer-item">Github repo</div>
+                <div class="card-footer-item">Live page</div>
               </div>
             </div>
           </div>
-          <div class="tile is-parent">
-            <div class="tile is-child">
-              <div class="card">
-                <div class="card-header">
-                  <div class="card-header-title is-centered">Test Card</div>
-                  <div class=></div>
-                </div>
-                <figure class="card-image">
-                  <img src="assets/Avatar 1.png" alt="">
-                </figure>
-                <div class="card-content">Card content, test asñlfkjasñldf</div>
-                <div class="card-footer">
-                  <div class="card-footer-item">Github repo</div>
-                  <div class="card-footer-item">Live page</div>
-                </div>
+        </div>
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title is-centered">Test Card</div>
+                <div class=></div>
               </div>
-            </div>
-          </div>
-          <div class="tile is-parent">
-            <div class="tile is-child">
-              <div class="card">
-                <div class="card-header">
-                  <div class="card-header-title is-centered">Test Card</div>
-                  <div class=></div>
-                </div>
-                <figure class="card-image">
-                  <img src="assets/Avatar 1.png" alt="">
-                </figure>
-                <div class="card-content">Card content, test asñlfkjasñldf</div>
-                <div class="card-footer">
-                  <div class="card-footer-item">Github repo</div>
-                  <div class="card-footer-item">Live page</div>
-                </div>
+              <figure class="card-image">
+                <img src="assets/Avatar 1.png" alt="">
+              </figure>
+              <div class="card-content">Card content, test asñlfkjasñldf</div>
+              <div class="card-footer">
+                <div class="card-footer-item">Github repo</div>
+                <div class="card-footer-item">Live page</div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="tile is-ancestor">
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title is-centered">Test Card</div>
+                <div class=></div>
+              </div>
+              <figure class="card-image">
+                <img src="assets/Avatar 1.png" alt="">
+              </figure>
+              <div class="card-content">Card content, test asñlfkjasñldf</div>
+              <div class="card-footer">
+                <div class="card-footer-item">Github repo</div>
+                <div class="card-footer-item">Live page</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title is-centered">Test Card</div>
+                <div class=></div>
+              </div>
+              <figure class="card-image">
+                <img src="assets/Avatar 1.png" alt="">
+              </figure>
+              <div class="card-content">Card content, test asñlfkjasñldf</div>
+              <div class="card-footer">
+                <div class="card-footer-item">Github repo</div>
+                <div class="card-footer-item">Live page</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <div class="card">
+              <div class="card-header">
+                <div class="card-header-title is-centered">Test Card</div>
+                <div class=></div>
+              </div>
+              <figure class="card-image">
+                <img src="assets/Avatar 1.png" alt="">
+              </figure>
+              <div class="card-content">Card content, test asñlfkjasñldf</div>
+              <div class="card-footer">
+                <div class="card-footer-item">Github repo</div>
+                <div class="card-footer-item">Live page</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <footer class="footer">
     <div class="content has-text-centered">
