card text centering

--- a/index.html
+++ b/index.html
@@ -76,13 +76,7 @@
             </ul>
           </div>
         </nav>
-        <!--  <div class="tab is-centered has-bullet-separator">
-              <ul>
-                <li> 
-                <li> </li>
-                <li> </li>
-              </ul>
-            </div> -->
+       
       </div>
     </div>
 
@@ -96,7 +90,7 @@
       </div>
     </div>
     <section class="section" id="projects">
-      <div class="container">
+      <div class="container has-text-centered">
           <div class="tile is-ancestor">
             <div class="tile is-parent">
               <div class="tile is-child">
