optimized current image assets

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <div class="columns is-centered is-vcentered">
             <div class="column">
               <figure class="container image is-128x128 is-hidden-desktop">
-                <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.jpg" alt="some handsome dude">
+                <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.webp" alt="some handsome dude">
               </figure>
               <figure class="container image is-hidden-touch">
-                <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.jpg" alt="some handsome dude" id="avatar"
+                <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.webp" alt="some handsome dude" id="avatar"
                   style="width: 70%; margin:auto;">
               </figure>
             </div>
@@ -96,7 +96,7 @@
               <div class="tile is-child">
                 <div class="card">
                   <figure class="card-image">
-                    <img class="image" src="assets/project-images/cow-image.jpg" alt="Some cows">
+                    <img class="image" src="assets/project-images/cow-image.webp" alt="Some cows">
                   </figure>
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
@@ -138,7 +138,7 @@
               <div class="tile is-child">
                 <div class="card">
                   <figure class="card-image">
-                    <img class="image" src="assets/project-images/cow-image.jpg" alt="Some cows">
+                    <img class="image" src="assets/project-images/cow-image.webp" alt="Some cows">
                   </figure>
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
@@ -167,7 +167,7 @@
               <div class="tile is-child">
                 <div class="card">
                   <figure class="card-image">
-                    <img class="image" src="assets/project-images/cow-image.jpg" alt="Some cows">
+                    <img class="image" src="assets/project-images/cow-image.webp" alt="Some cows">
                   </figure>
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
@@ -199,7 +199,7 @@
               <div class="tile is-child">
                 <div class="card">
                   <figure class="card-image">
-                    <img class="image" src="assets/project-images/cow-image.jpg" alt="Some cows">
+                    <img class="image" src="assets/project-images/cow-image.webp" alt="Some cows">
                   </figure>
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
@@ -228,7 +228,7 @@
               <div class="tile is-child">
                 <div class="card">
                   <figure class="card-image">
-                    <img class="image" src="assets/project-images/cow-image.jpg" alt="Some cows">
+                    <img class="image" src="assets/project-images/cow-image.webp" alt="Some cows">
                   </figure>
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
@@ -257,7 +257,7 @@
               <div class="tile is-child">
                 <div class="card">
                   <figure class="card-image">
-                    <img class="image" src="assets/project-images/cow-image.jpg" alt="Some cows">
+                    <img class="image" src="assets/project-images/cow-image.webp" alt="Some cows">
                   </figure>
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
