--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
           <div class="container">
             <ul>
               <li class="">
-                <a class="has-text-weight-bold" href="#projects">Projects</a></li>
+                <a class="has-text-weight-medium" href="#projects">Projects</a></li>
               </li>
               <li>
-                <a class="has-text-weight-bold" href="#">Blog posts
+                <a class="has-text-weight-medium" href="#">Blog posts
                   <span class="tag is-info ml-2">Soon!</span></a>
               </li>
 
 
               <li>
-                <a class="has-text-weight-bold" href="#">Other stuff
+                <a class="has-text-weight-medium" href="#">Other stuff
                   <span class="tag is-info ml-2">Also soon!</span></a>
               </li>
 
@@ -143,7 +143,7 @@
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
                   </div>
-                  <div class="card-content">A simple landing page made with plain CSS.</div>
+                  <div class="card-content has-text-weight-light">A simple landing page made with plain CSS.</div>
                   <div class="card-footer">
                     <div class="card-footer-item">
                       <div class="buttons is-centered">
@@ -172,7 +172,7 @@
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
                   </div>
-                  <div class="card-content">A simple landing page made with plain CSS.</div>
+                  <div class="card-content has-text-weight-light">A simple landing page made with plain CSS.</div>
                   <div class="card-footer">
                     <div class="card-footer-item">
                       <div class="buttons is-centered">
@@ -204,7 +204,7 @@
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
                   </div>
-                  <div class="card-content">A simple landing page made with plain CSS.</div>
+                  <div class="card-content has-text-weight-light">A simple landing page made with plain CSS.</div>
                   <div class="card-footer">
                     <div class="card-footer-item">
                       <div class="buttons is-centered">
@@ -233,7 +233,7 @@
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
                   </div>
-                  <div class="card-content">A simple landing page made with plain CSS.</div>
+                  <div class="card-content has-text-weight-light">A simple landing page made with plain CSS.</div>
                   <div class="card-footer">
                     <div class="card-footer-item">
                       <div class="buttons is-centered">
@@ -262,7 +262,7 @@
                   <div class="card-header">
                     <div class="card-header-title is-centered is-primary">Cow Products</div>
                   </div>
-                  <div class="card-content">A simple landing page made with plain CSS.</div>
+                  <div class="card-content has-text-weight-light">A simple landing page made with plain CSS.</div>
                   <div class="card-footer">
                     <div class="card-footer-item">
                       <div class="buttons is-centered">
