--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <h1 class="title is-size-2 is-size-1-tablet">Leno Nava
                 <h2 class="subtitle is-size-4 is-size-3-tablet">Front-end Developer</h2>
                 <div class="content">
-                  <p class="has-text-weight-light is-size-6 is-size-5-tablet">Venezuela-based dev and web designer. He makes pretty stuff with <span
+                  <p class="has-text-weight-light is-size-6 is-size-5-tablet">I'm a developer and web designer based in Maracaibo. He makes pretty stuff with <span
                       class="has-text-weight-medium"> React</span>, <span class="has-text-weight-medium">CSS
                       libraries</span>
                       <span> and likes dogs, old school RPGs & Twin Peaks 🦉</span>
