--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
 
         </div>
       </div>
-      <div class="hero-foot">
+      <div class="hero-foot" style="background-color: hsl(191deg 62% 35% / 50%);">
         <nav class="tabs is-boxed is-fullwidth">
           <div class="container">
             <ul>
               <li class="">
-                <a class="has-text-weight-medium" href="#projects">Projects</a></li>
+                <a class="has-text-weight-bold" href="#projects">Projects</a></li>
               </li>
               <li>
-                <a class="has-text-weight-medium" href="#">Blog posts
+                <a class="has-text-weight-bold" href="#">Blog posts
                   <span class="tag is-info ml-2">Soon!</span></a>
               </li>
 
 
               <li>
-                <a class="has-text-weight-medium" href="#">Other stuff
+                <a class="has-text-weight-bold" href="#">Other stuff
                   <span class="tag is-info ml-2">Also soon!</span></a>
               </li>
 
