--- a/index.html
+++ b/index.html
@@ -14,24 +14,44 @@
 
 <body>
   <div class="">
+    
     <div class="hero is-primary has-text-centered-touch has-text-left is-bold is-fullheight" id="information">
+      <div class="hero-head">
+        <div class="navbar is-transparent is-tab">
+          <div class="navbar-menu">
+            <div class="navbar-end">
+              <a class="navbar-item" href="#projects">
+                Projects
+              </a>
+              <a class="navbar-item">
+                Blog posts
+                  <span class="tag is-info is-light ml-2">Soon!</span>
+              </a>
+              <a class="navbar-item">
+                Other stuff
+                <span class="tag is-info is-light ml-2">Also soon!</span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="hero-body">
         <div class="container">
           <div class="columns is-centered is-vcentered">
-            <div class="column">
+            <div class="column is-5">
               <figure class="container image is-128x128 is-hidden-desktop">
                 <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.webp" alt="some handsome dude">
               </figure>
               <figure class="container image is-hidden-touch">
                 <img class="is-rounded" src="assets/photo_2020-06-14_21-29-47.webp" alt="some handsome dude" id="avatar"
-                  style="width: 70%; margin:auto;">
+                  style="width: 60%; margin:auto;">
               </figure>
             </div>
-            <div class="column" id="information-column">
+            <div class="column is-5" id="information-column">
               <h1 class="title is-size-2 is-size-1-tablet">Leno Nava
                 <h2 class="subtitle is-size-4 is-size-3-tablet">Front-end Developer</h2>
                 <div class="content">
-                  <p class="has-text-weight-light is-size-6 is-size-5-tablet">Developer and web designer based in Maracaibo. He makes pretty stuff with <span
+                  <p class="has-text-weight-light is-size-6 ">Developer and web designer based in Maracaibo. He makes pretty stuff with <span
                       class="has-text-weight-medium"> React</span>, <span class="has-text-weight-medium">CSS
                       libraries</span>
                       <span> and likes dogs, old school RPGs & Twin Peaks 🦉</span>
@@ -51,11 +71,11 @@
                 </div>
             </div>
           </div>
-
+ 
 
         </div>
       </div>
-      <div class="hero-foot" style="background-color: hsl(191deg 62% 35% / 50%);">
+      <div class="hero-foot is-hidden-desktop" style="background-color: hsl(191deg 62% 35% / 50%);">
         <nav class="tabs is-boxed is-fullwidth">
           <div class="container">
             <ul>
