details in desktop view

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-  <div class="">
-    
+  <div class=""> 
     <div class="hero is-primary has-text-centered-touch has-text-left is-bold is-fullheight" id="information">
       <div class="hero-head">
         <div class="navbar is-transparent is-tab">
@@ -58,7 +57,7 @@
                        
                   </p>
                 </div>
-                <div class="container is-narrow">
+                <div class="container is-narrow" id="social-links">
                   <span class="icon is-large">
                     <a href="twitter.com/lofiln" class="fab fa-lg fa-twitter" style="color: #fff"></a>
                   </span>
