small hero text change

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <h1 class="title is-size-3-only-touch is-size-1 mb-4">I'm Lenin Nava</h1>
                 <h2 class="subtitle is-size-3 is-size-3-tablet" style="color: rgb(206 247 255) ">Front-end Developer/designer from Maracaibo</h2> 
                 <div class="content">
-                  <p class="has-text-weight-light is-size-6">
+                  <p class="has-text-weight-normal is-size-6">
                     <span class="has-text-weight-light">I make pretty
                     stuff with <span class="has-text-weight-medium"> React</span> and <span
                       class="has-text-weight-medium">CSS
